--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: #fff !important;
   letter-spacing: 1px;
-  padding: 0 10px;
-  margin-right: 70px;
+  padding: 0 50px;
   font-size: 20px;
   opacity: 0.75;
 }
@@ -114,7 +113,8 @@ nav.navbar .navbar-nav a.nav-link.navbar-link.active {
     opacity: 1;
 }
 span.navbar-text {
-    display: flex;
+    display: table;
+    margin: 0 auto;
     align-items: center;
 }
 .social-icon {
@@ -304,10 +304,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-right: 0.06em solid #FF884B;
 }
 
-/* Skills CSS */
+/* Function CSS */
 
 .function {
-  padding: 0 0 100px 0;
+  padding: 80px 0;
   position: relative;
 }
 .function-bx {
@@ -318,6 +318,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .function h2 {
 	font-size: 45px;
 	font-weight: 700;
+  text-align: center;
 }
 .function p {
     color: #B8B8B8;
