--- a/src/App.css
+++ b/src/App.css
@@ -98,13 +98,13 @@ nav.navbar.scrolled {
   background-color: #121212;
 }
 nav.navbar a.navbar-brand {
-    width: 10%;
+    width: 150px;
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: #fff !important;
   letter-spacing: 1px;
-  padding: 0 50px;
+  margin-left: 10px;
   font-size: 20px;
   opacity: 0.75;
 }
@@ -119,7 +119,6 @@ span.navbar-text {
 }
 .social-icon {
     display: inline-block;
-    margin-left: 14px;
 }
 .social-icon a {
     width: 42px;
@@ -157,7 +156,6 @@ span.navbar-text {
   border: 1px solid #fff;
   padding: 18px 34px;
   font-size: 18px;
-  margin-left: 18px;
 	position: relative;
 	background-color: transparent;
 	transition: 0.3s ease-in-out;
@@ -265,7 +263,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  width: 96%;
+  width: 100%;
 }
 .banner button {
   color: #fff;
@@ -482,7 +480,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .getStarted img {
-  width: 20%;
+  width: 30%;
   margin-inline: 2%;
   display: inline-block;
 }
